--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "proto/flakkacore"]
 	path = proto/flakkacore
-	url = git@bestow.github.com:flakkacode/flakkacore
+	url = git@github.com:flakkacode/flakkacore
