--- a/.github/workflows/checkout.yml
+++ b/.github/workflows/checkout.yml
@@ -15,3 +15,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - uses: ahmadnassri/action-dependabot-auto-merge@v2
+        with:
+          target: minor
+          github-token: ${{ secrets.AUTO_MERGE_GITHUB_TOKEN }}
